[package]
name = "b1-keylogger"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser", "errhandlingapi"]}
user32-sys = "0.2.0"
lazy_static = "1.4.0"
chrono = "0.4"
single-instance = "0.1.1"