# snippet of code @ 2020-03-13 09:55:31

# === Rust Playground ===
# This snippet is in: ~/.emacs.d/rust-playground/at-2020-03-13-095531/

# Execute the snippet: C-c C-c
# Delete the snippet completely: C-c k
# Toggle between main.rs and Cargo.toml: C-c b

[package]
name = "foo"
version = "0.1.0"
authors = ["Rust Example <rust-snippet@example.com>"]
edition = "2018"

[dependencies]
rayon = "1.1"
dashmap = "3.7.0"
chrono = "0.4"
colored = "1.9"
ansi_term = "0.12"